feat: solution of day20 part1